--- a/angular-app/src/app/components/private-app/private-app.component.html
+++ b/angular-app/src/app/components/private-app/private-app.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="user.role==='ADM'">
-    <app-admin-dashboard></app-admin-dashboard>
+    <app-admin-dashboard [user]="user"></app-admin-dashboard>
 </div>
 <div *ngIf="user.role==='TECH'">
     <app-tech-dashboard></app-tech-dashboard>
