--- a/angular-app/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/angular-app/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,6 @@
+<mat-card class="top">
+	<button mat-raised-button color="primary" (click)="handleSubmit($event)">Logout</button>
+</mat-card>
 <div *ngIf="user">
     <h1>Hello {{user.name}}</h1>
 </div>
