--- a/angular-app/src/app/components/profile-details/profile-details.component.html
+++ b/angular-app/src/app/components/profile-details/profile-details.component.html
@@ -1,10 +1,14 @@
 <h1>{{user.name}}'s Profile</h1>
-<p>Name: {{user.name}}</p>
-<p>idCard: {{user.idCard}}</p>
-<p>Role: {{user.role}}</p>
-<p>address: {{user.address}}</p>
-<p>age: {{user.age}}</p>
+<p *ngIf="user.role==='ADM'">Role: Admin</p>
 <p>email: {{user.email}}</p>
-<p>phone Number: {{user.phoneNumber}}</p>
+
+<p>Change Password</p>
+<div>
+<label>New password:
+    <input [(ngModel)]="password" placeholder="new passwrod"/>
+</label><br>
+<button (click)="changePass()">submit</button>
+</div>
+
 
 
