--- a/angular-app/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/angular-app/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-card class="top">
-	<button mat-raised-button color="primary" (click)="handleSubmit($event)">Logout</button>
+	<button mat-raised-button color="primary" (click)="logout($event)">Logout</button>
 </mat-card>
 <div *ngIf="user">
     <h1>Hello {{user.name}}</h1>
