--- a/angular-app/src/app/components/profile-details/profile-details.component.html
+++ b/angular-app/src/app/components/profile-details/profile-details.component.html
@@ -1,12 +1,28 @@
 <h1>{{user.name}}'s Profile</h1>
 <p *ngIf="user.role==='ADM'">Role: Admin</p>
+<p *ngIf="user.role==='TECH'">Role: Technic</p>
+<p *ngIf="user.role==='EXT'">Role: External</p>
+
 <p>email: {{user.email}}</p>
+
+<div *ngIf="user.role==='EXT' || user.role==='TECH'">
+    <p>address: {{user.address}}</p>
+    <p>age: {{user.age}}</p>
+    <p>phoneNumber: {{user.phoneNumber}}</p>
+
+</div>
+<p>idCard: {{user.idCard}}</p>
+<div *ngIf="user.role==='EXT'">
+    <p *ngIf="user.infected == true; else elseBlock">Status: Infected</p>
+    <ng-template #elseBlock>Status: Suspect</ng-template>
+</div>
+    
 
 <div *ngIf="user.role==='ADM'">
     <p>Change Password</p>
-    <label>New password:
-        <input [(ngModel)]="password" placeholder="new passwrod" />
-    </label><br>
+    <mat-form-field id="pass" appearance="fill">
+        <mat-label color="primary">New password:</mat-label>
+        <input matInput [(ngModel)]="password" name="password" type="password" placeholder="new passwrod" required>
+    </mat-form-field>
     <button (click)="changePass()">submit</button>
 </div>
-
