Done some component reusage

--- a/angular-app/src/app/components/Dashboards/tech-dashboard/tech-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/tech-dashboard/tech-dashboard.component.html
@@ -1,4 +1,5 @@
 <div>
     <button (click)="seeProfile()">Profile</button>
+    <button (click)="ExtManagement()">Gestão de Externos</button>
 </div>
 <app-list-covtest></app-list-covtest>
