--- a/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.html
+++ b/angular-app/src/app/components/UserCrud/edit-user/edit-user.component.html
@@ -1,1 +1,28 @@
-<p>edit-user works!</p>
+<div>
+    <h2>Edit Menu</h2>
+    <div>
+        <label>user Name:
+            <input [(ngModel)]="userData.name" placeholder="user Name" />
+        </label><br>
+        <label>user address:
+            <input [(ngModel)]="userData.address" placeholder="address" />
+        </label><br>
+        <label>user age:
+            <input [(ngModel)]="userData.age" placeholder="age" />
+        </label><br>
+        <label>email:
+            <input [(ngModel)]="userData.email" placeholder="email" />
+        </label><br>
+        <label>password:
+            <input [(ngModel)]="userData.password" value=""/>
+        </label><br>
+        <label>phone number:
+            <input [(ngModel)]="userData.phoneNumber" placeholder="phoneNumber" />
+        </label><br>
+        <label>idCard:
+            <input [(ngModel)]="userData.idCard" placeholder="idCard" />
+        </label><br>
+    </div>
+    <button (click)="update()">Update changes</button>
+    <button (click)="Back()">Back to profile</button>
+</div>
