--- a/angular-app/src/app/components/UserCrud/add-user/add-user.component.html
+++ b/angular-app/src/app/components/UserCrud/add-user/add-user.component.html
@@ -23,5 +23,5 @@
             <input [(ngModel)]="userData.idCard" placeholder="idCard" />
         </label><br>
     </div>
-    <button (click)="addTech()">Save</button>
+    <button (click)="addUser()">Save</button>
 </div>
