--- a/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
@@ -1,1 +1,47 @@
-<p>edit-covtest works!</p>
+<div *ngIf="covtest">
+
+    <p>code: {{ covtest.code }}</p>
+    <p>description: {{ covtest.description }}</p>
+    <p>userHistory: {{ covtest.userHistory }}</p>
+    <p>riskGroup: {{ covtest.riskGroup }}</p>
+    <p>riskJob: {{ covtest.riskJob }}</p>
+    <p>testStatus: {{ covtest.testStatus }}</p>
+
+    <label for="userStatus">Editar estado de utilizador:</label>
+
+    <select id="userStatus" [(ngModel)]="userStatus">
+        <option value="suspeito">Suspeito</option>
+        <option value="infetado">Infetado</option>
+        <option value="saudavel">Saudavel</option>
+    </select>
+    <button (click)="updateUsrStatus( covtest.code )">Atualizar estado de utilizador</button>
+
+    <br>
+
+    <label for="testResult">Editar estado do teste:</label>
+    <select id="testResult" [(ngModel)]="testResult">
+        <option value="negativo">Negativo</option>
+        <option value="positivo">Positivo</option>
+    </select>
+    <button (click)="updateResult( covtest.code )">Atualizar Resultado</button>
+
+    <br>
+
+    <form name="dateForm">
+        <label for="dateInput">Agendar Teste: </label>
+        <input type="date" [(ngModel)]="schedule" id="dateInput" name="date" placeholder="yyyy-MM-dd" required />
+        <button type="button" form="dateForm" value="Submit" (click)="scheduleTest(covtest.code)">Agendar</button>
+    </form>
+
+    <form class="uploadFile" enctype="multipart/form-data">
+        <label for="file">Choose File</label>
+        <input type="file" id="file" (change)="handleFileInput($event, covtest.code)">
+    </form>
+      
+
+    <p>saude24: {{ covtest.saude24 }}</p>
+    <div *ngIf="covtest.user">
+        <p>user: {{ covtest.user.name }}</p>
+    </div>
+
+</div>
