upload file bug

--- a/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
@@ -35,7 +35,7 @@
 
     <form class="uploadFile" enctype="multipart/form-data">
         <label for="file">Choose File</label>
-        <input type="file" id="file" (change)="handleFileInput($event, covtest.code)">
+        <input type="file" id="file" name="file" (change)="handleFileInput($event, covtest.code)">
     </form>
       
 
