add pending/positive/negative queries

--- a/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
@@ -20,8 +20,8 @@
 
     <label for="testResult">Editar estado do teste:</label>
     <select id="testResult" [(ngModel)]="testResult">
-        <option value="negativo">Negativo</option>
-        <option value="positivo">Positivo</option>
+        <option value="negative">Negativo</option>
+        <option value="positive">Positivo</option>
     </select>
     <button (click)="updateResult( covtest.code )">Atualizar Resultado</button>
 
