--- a/angular-app/src/app/components/CovtestCrud/detail-covtest/detail-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/detail-covtest/detail-covtest.component.html
@@ -20,6 +20,6 @@
 
     <button (click)="Back()">Back to Dashboard</button>
 
-    <button> Download File </button>
+    <button (click)="download(covtest.code)"> Download File </button>
 
 </div>
