--- a/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/edit-covtest/edit-covtest.component.html
@@ -47,4 +47,6 @@
         <p>user: {{ covtest.user.name }}</p>
     </div>
 
+    <button (click)="Back(covtest.code)">Back to Details</button>
+
 </div>
