--- a/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/ext-dashboard/ext-dashboard.component.html
@@ -1,3 +1,16 @@
+<div class="list">
+    <mat-grid-list cols="3" rowHeight="50px">
+        <ng-container *ngFor="let covtest of covtests; index as i">
+            <mat-grid-tile>{{covtest.code}}</mat-grid-tile>
+            <mat-grid-tile><button (click)="TestDetails( covtest.code )">Test Details</button></mat-grid-tile>
+            <mat-grid-tile type="date">{{ covtest.schedule | date :  "dd/MM/y"}}</mat-grid-tile>
+        </ng-container>
+    </mat-grid-list>
+</div>
+
 <div>
     <button (click)="seeProfile()">Profile</button>
+    <button (click)="logout()">Logout</button>
+    <button (click)="add()">Adicionar pedido</button>
 </div>
+<router-outlet></router-outlet>
