--- a/angular-app/src/app/components/CovtestCrud/list-covtest/list-covtest.component.html
+++ b/angular-app/src/app/components/CovtestCrud/list-covtest/list-covtest.component.html
@@ -10,6 +10,7 @@
     <button (click)="getPositiveTests()">Obter testes positivos</button><br>
     <button (click)="getNegativeTests()">Obter testes negativos</button><br>
     <button (click)="getPendingTests()">Obter testes em espera</button><br>
+    <button (click)="getTotalTests()">Obter testes</button><br>
 
 
 </form>
