--- a/angular-app/src/app/components/UserCrud/user-profile/user-profile.component.html
+++ b/angular-app/src/app/components/UserCrud/user-profile/user-profile.component.html
@@ -13,6 +13,15 @@
         <p *ngIf="user.infected; else elseContent; ">Status: Infected</p>
         <ng-template #elseContent>Status: Healthy</ng-template>
 
+        <div class="list">
+            <mat-grid-list cols="2" rowHeight="50px">
+                <ng-container *ngFor="let covtest of user.covtest; index as i">
+                    <mat-grid-tile>{{covtest.code}}</mat-grid-tile>
+                    <mat-grid-tile type="date">{{ covtest.schedule | date :  "dd/MM/y"}}</mat-grid-tile>
+                </ng-container>
+            </mat-grid-list>
+        </div>
+
         <button (click)="usrMng()">External Management</button>
     </div>
 
