--- a/angular-app/src/app/components/login/login.component.html
+++ b/angular-app/src/app/components/login/login.component.html
@@ -1,32 +1,34 @@
-<img class="bgimg" src="assets/search-container-img.jpg">
-<mat-card class="top">
-	<p>Centro de análises de Covid-19</p>
-</mat-card>
-<div class="login">
-	<mat-card class="loginCard">
-		<mat-card-header>
-			<mat-card-title>Login</mat-card-title>
-		</mat-card-header>
-		<mat-card-content>
-			<form class="login-form">
-				<mat-form-field appearance="fill">
-					<mat-label>email</mat-label>
-					<input matInput [(ngModel)]="email" name="email" type="text" placeholder="email" required>
-				</mat-form-field>
-
-				<mat-form-field appearance="fill">
-					<mat-label>password</mat-label>
-					<input matInput [(ngModel)]="password" name="password" type="password" placeholder="password" required>
-				</mat-form-field>
-
-				<div *ngIf="errors">
-					{{ errors }}
-				</div>
-
-			</form>
-		</mat-card-content>
-		<mat-card-actions>
-			<button mat-raised-button color="primary" (click)="handleSubmit($event)">Login</button>
-		</mat-card-actions>
+<div class="bg">
+	<mat-card class="top">
+		<p>Centro de análises de Covid-19</p>
 	</mat-card>
+	<div class="container">
+		<mat-card class="loginCard">
+			<mat-card-header>
+				<mat-card-title>Login</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<form class="login-form">
+					<mat-form-field appearance="fill">
+						<mat-label>email</mat-label>
+						<input matInput [(ngModel)]="email" name="email" type="text" placeholder="email" required>
+					</mat-form-field>
+					<br>
+					<mat-form-field appearance="fill">
+						<mat-label>password</mat-label>
+						<input matInput [(ngModel)]="password" name="password" type="password" placeholder="password"
+							required>
+					</mat-form-field>
+	
+					<div *ngIf="errors">
+						{{ errors }}
+					</div>
+	
+				</form>
+			</mat-card-content>
+			<mat-card-actions>
+				<button mat-raised-button color="primary" (click)="handleSubmit($event)">Login</button>
+			</mat-card-actions>
+		</mat-card>
+	</div>
 </div>
