--- a/angular-app/src/app/components/login/login.component.sass
+++ b/angular-app/src/app/components/login/login.component.sass
@@ -1,29 +1,77 @@
-.top
-    display: flex
-    border-radius: 0px
-    height: 20px
-    background-color: #c0c0c0
-
-.bgimg 
-    position: fixed
-    width: 100%
+body, html 
     height: 100%
+    margin: 0
 
-.login
-    display: flex
-    justify-content: center
-    align-items: center
-    min-height: 90%
+.bg
+    background-image: url("../../../assets/search-container-img.jpg")
+    height: 100%
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
 
-    .mat-card
-        margin-top: 15px
+.top
+    border-radius: 0px
+
+.container
+    width: 300px
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+
+    .loginCard
         display: flex
         flex-direction: column
         justify-content: center
         text-align: center
-        align-items: center
-        width: 300px
-        padding-bottom: 20px
-        background-color: #c0c0c0
+        padding-bottom: 25px
 
+        .mat-card-header
+            justify-content: center
+            .mat-card-title
+                text-align: center
+                justify-content: center
+
+    
+
+
+/*
+ 
+ .container 
+ position: relative
+ text-align: center
+ color: white
+ height: 93%
+ width: 100%
+ .image
+ width: 100%
+ height: 100%
+ .loginCard
+ position: absolute
+ top: 50%
+ left: 50%
+ transform: translate(-50%, -50%)
+ display: flex
+ flex-direction: column
+ justify-content: center
+ width: 300px
+ .mat-card-header
+ justify-content: center
+ .mat-card-title
+ text-align: center
+ justify-content: center
+ .loginCard
+ display: flex
+ justify-content: center
+ align-items: center
+ min-height: 90%
+ */
+
+@media ( max-width: 720px  )
+    .bg
+        height: 100%
+        width: 100%
+        background-position: center
+        background-repeat: no-repeat
+        background-size: cover
     
