--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.sass
@@ -1,7 +1,19 @@
 .top
     display: flex
     border-radius: 0px
-    height: 30px
+    margin-top: 0px
+    margin-bottom: 5px
+    padding: 5px
+    justify-content: space-between
+    //box-sizing: border-box
+
+    .mat-icon-button
+        .mat-icon
+            padding-bottom: 2%
+
+    #title
+        margin-top: 10px
+
 
 h1
     text-align: center
