--- a/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/angular-app/src/app/components/Dashboards/admin-dashboard/admin-dashboard.component.html
@@ -7,7 +7,7 @@
         <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="TechManagement()">Gestão de Técnicos
             </button>
-            <button mat-menu-item (click)="seeProfile()">Perfil do Admin
+            <button mat-menu-item (click)="seeProfile()">Meu Perfil
             </button>
             <button mat-menu-item (click)="logout()">Logout
             </button>
